feat: setting for update tax ratio
