# app/src/main/java/id/my/rizalanggoro/emasku/presentation/pages/setting/SettingViewModel.kt
@@ -9,6 +9,8 @@ import id.my.rizalanggoro.emasku.core.UiState
 import id.my.rizalanggoro.emasku.core.toFailure
 import id.my.rizalanggoro.emasku.openapi.apis.GeneralApi
 import id.my.rizalanggoro.emasku.openapi.models.GetSettingsRes
+import id.my.rizalanggoro.emasku.openapi.models.UpdateTaxSettingReq
+import id.my.rizalanggoro.emasku.openapi.models.UpdateTaxSettingRes
 import io.ktor.client.plugins.ResponseException
 import io.ktor.client.statement.bodyAsText
 import kotlinx.coroutines.launch
@@ -32,6 +34,33 @@ class SettingViewModel(
         } catch (e: Exception) {
             e.printStackTrace()
             settingsState = UiState.Failure()
+        }
+    }
+
+    var updateState by mutableStateOf<UiState<UpdateTaxSettingRes>>(UiState.Initial)
+        private set
+
+    fun resetUpdateState() {
+        updateState = UiState.Initial
+    }
+
+    fun updateTaxSetting(tax: Double) = viewModelScope.launch {
+        try {
+            updateState = UiState.Loading
+            val body = generalApi.updateTaxSetting(
+                UpdateTaxSettingReq(
+                    taxPercentage = tax.toBigDecimal()
+                )
+            ).body()
+            updateState = UiState.Success(body)
+        } catch (e: ResponseException) {
+            e.printStackTrace()
+            updateState = UiState.Failure(
+                message = e.response.bodyAsText().toFailure().message
+            )
+        } catch (e: Exception) {
+            e.printStackTrace()
+            updateState = UiState.Failure()
         }
     }
 
