# openapi/src/main/kotlin/id/my/rizalanggoro/emasku/openapi/models/UpdateTaxSettingReq.kt
@@ -1,0 +1,37 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "UnusedImport"
+)
+
+package id.my.rizalanggoro.emasku.openapi.models
+
+
+import com.google.gson.annotations.SerializedName
+
+/**
+ * 
+ *
+ * @param taxPercentage 
+ */
+
+
+data class UpdateTaxSettingReq (
+
+    @SerializedName("tax_percentage")
+    val taxPercentage: java.math.BigDecimal
+
+) {
+
+
+}
+
